[Feature #166240834] Allow users to tag articles
